pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
     - name: aniteshnginx
       image: nginx
