service.yml
apiVersion: v1
kind: Service
metadata:
  labels: 
    run: tomcat 
  name: tomcat 
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort:
    port: 80
    targetPort: 1000
    protocol: TCP
  selector:
    run: tomanitesh
    type: NodePort
#status:
#loadBalancer: {}
