ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aniteshtom
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /aniteshtom
        backend:
          serviceName: aniteshtom
          servicePort: 8080
